# Copyright 2010, 2018, Florent Lamiraux, CNRS
#


SET(${PROJECT_NAME}_SOURCES
  inverted-pendulum
  feedback-controller
  )

SET(${PY_NAME}_PYTHON
  simu.py
  )

ADD_LIBRARY(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCES})
PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} dynamic-graph)

IF(BUILD_PYTHON_INTERFACE)
  PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} dynamic-graph-python)
  DYNAMIC_GRAPH_PYTHON_MODULE("tutorial" ${PROJECT_NAME} wrap)
  INSTALL(FILES ${${PY_NAME}_PYTHON} DESTINATION "${PYTHON_SITELIB}/dynamic_graph/tutorial/")
ENDIF(BUILD_PYTHON_INTERFACE)

IF (NOT INSTALL_PYTHON_INTERFACE_ONLY)
  INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
ENDIF (NOT INSTALL_PYTHON_INTERFACE_ONLY)
