ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)

ADD_UNIT_TEST(pendulum pendulum.cpp)
TARGET_LINK_LIBRARIES(pendulum PRIVATE ${PROJECT_NAME} Boost::unit_test_framework)

ADD_UNIT_TEST(controller controller.cpp)
TARGET_LINK_LIBRARIES(controller PRIVATE ${PROJECT_NAME} Boost::unit_test_framework)

IF(BUILD_PYTHON_INTERFACE)
  ADD_PYTHON_UNIT_TEST(simu "tests/simu.py" src)
ENDIF(BUILD_PYTHON_INTERFACE)
